# ICUAS26

./: .autocp  .gitignore  Dockerfile  README.md  Readme.md  first_run.sh  gui_intel.sh  host_setup.sh  ssh_auth_sock
.claude/: settings.local.json
.devcontainer/: devcontainer.json
debug_logger/: CMakeLists.txt  package.xml
debug_logger/src/: debug_logger_node.cpp
octomap/: CMakeLists.txt  bound_box.cpp  downloaded_map.bt  waypoints.json  waypoints.txt
path_planning/: CMakeLists.txt  final_path.txt  final_path_coordinates.csv  final_waypoints_ordered.csv  graph_solver.cpp  icuas_waypoints.json  main.cpp  matching_problem.txt  plotter.py  vertices.csv
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/solution/lib/solution/: drone_role  tagger_drone
ros2_ws/install/solution/share/solution/: package.sh  package.xml
ros2_ws/install/solution_interfaces/include/solution_interfaces/solution_interfaces/srv/: assign.hpp
ros2_ws/install/solution_interfaces/include/solution_interfaces/solution_interfaces/srv/detail/: assign__functions.c  assign__functions.h  assign__rosidl_typesupport_fastrtps_c.h  assign__rosidl_typesupport_introspection_c.h  assign__struct.h  assign__type_support.c  assign__type_support.cpp  assign__type_support.h  assign__type_support.hpp
ros2_ws/install/solution_interfaces/local/lib/python3.10/dist-packages/solution_interfaces-0.0.0-py3.10.egg-info/: SOURCES.txt
ros2_ws/install/solution_interfaces/local/lib/python3.10/dist-packages/solution_interfaces/srv/: __init__.py  _assign.py
ros2_ws/install/solution_interfaces/share/solution_interfaces/: local_setup.sh  package.sh
ros2_ws/install/solution_interfaces/share/solution_interfaces/srv/: Assign_Request.msg
ros2_ws/src/log/: latest_build
ros2_ws/src/octomap_map_generator/src/: map_generator.cpp  waypoint_extractor_node.cpp
scripts/: test_target_found_error.py
solution/: final_coordinates_cf1.csv  final_coordinates_cf2.csv  final_coordinates_cf3.csv
solution/aruco_mission/aruco_mission/: aruco_mission_node.py
solution/fleet_control/fleet_control/: battery_node.py
solution/mission_coordinator/: setup.py
solution/mission_follower/: setup.py
solution/mission_follower/mission_follower/: final_coordinates_cf3.csv
solution/octomap_map_generator/: CMakeLists.txt
solution/octomap_map_generator/src/: waypoint_extractor_node.cpp
solution/path_planning/: graph_solver.hpp  main.cpp  path_planning_ros.py  solve_matching.py
solution/path_planning/.cph/: .main.cpp_79fc544ce1fea18a64d62721f46f4286.prob
solution/solution/: setup.py
solution/solution/solution/: center_role.py  drone_role.py
startup/: _setup.sh  restart.sh  session.yml  start.sh
workspace/: Dockerfile  colcon_defaults.yaml  config.yaml  deploy_node.py  distributed_mpc_node.py  occupancy_grid_z1.csv  path_log.csv  pod.sh
workspace/.claude/: settings.local.json
workspace/prediction/: predict.py
workspace/research_paper/: grid_metadata.txt  test.py
workspace/src/: obstacle-viewpoint_search_07affb7a.plan.md
workspace/src/aruco_mission/: package.xml  setup.cfg  setup.py
workspace/src/aruco_mission/aruco_mission/: aruco_mission_node.py
workspace/src/aruco_mission_cpp/: CMakeLists.txt  package.xml
workspace/src/aruco_mission_cpp/src/: aruco_mission_node.cpp  utils.cpp  utils.hpp
workspace/src/controller/: package.xml  setup.py
workspace/src/controller/controller/: center_node.py  center_role.py  charging_role.py  follower_node.py  follower_role.py  main.py
workspace/src/debug_tools/: CMakeLists.txt  package.xml
workspace/src/debug_tools/scripts/: grid_plotter.py
workspace/src/debug_tools/src/: connectivity_checker.cpp  debug_logger_node.cpp  grid_visualizer.cpp  octomap_binary_publisher.cpp  role_publisher.cpp  slider_gui_node.cpp
workspace/src/fleet_control/: package.xml  setup.cfg  setup.py
workspace/src/fleet_control/fleet_control/: manager_node.py
workspace/src/fleet_control/launch/: fleet.launch.py
workspace/src/graph_traversal/: CMakeLists.txt  README.md  package.xml  plot.py  search.md
workspace/src/graph_traversal/include/: utils.hpp
workspace/src/graph_traversal/include/graph_traversal/: los.hpp
workspace/src/graph_traversal/src/: bfs.cpp  improved_repulsion.md  move.cpp  move.md  occupancy_grid.cpp  octomap_processor.cpp  prediction.cpp  search_manager.cpp  search_manager.hpp  swarm_planner.hpp  swarm_planner_bms.cpp  swarm_planner_control.cpp  swarm_planner_grid.cpp  swarm_planner_init.cpp  swarm_planner_mission.cpp  swarm_planner_rth.cpp  test_utils.cpp  types.hpp  utils.cpp  utils.hpp
workspace/src/hover/: hover_charge.py
workspace/src/mission_coordinator/: package.xml  setup.py
workspace/src/mission_coordinator/launch/: fleet.launch.py
workspace/src/mission_coordinator/mission_coordinator/: coordinate.py  manager_node.py
workspace/src/mission_follower/: center_role.py  package.xml  setup.cfg
workspace/src/mission_follower/mission_follower/: center_role.py  charging_role.py  final_coordinates_cf1.csv  final_coordinates_cf2.csv  follower.py  main.py  mission.py
workspace/src/my_robot_pkg/: package.xml  setup.py
workspace/src/my_robot_pkg/launch/: fleet_launch.py
workspace/src/my_robot_pkg/my_robot_pkg/: listener.py  talker.py
workspace/src/octomap_map_generator/: CMakeLists.txt  package.xml
workspace/src/octomap_map_generator/.cache/clangd/index/: graph_solver.cpp.836AD82E67E89564.idx  graph_solver.hpp.84E8CDAF1B9601D5.idx  waypoint_extractor_node.cpp.7964FA3197144921.idx
workspace/src/octomap_map_generator/src/: graph_solver.cpp  graph_solver.hpp  waypoint_extractor_node.cpp
workspace/src/solution/solution/: tagger_drone.py
workspace/src/solution_interfaces/: CMakeLists.txt  package.xml
workspace/src/swarm_viz/: CMakeLists.txt  README.md  package.xml
workspace/src/swarm_viz/include/swarm_viz/: marker_helpers.hpp
workspace/src/swarm_viz/launch/: foxglove.launch.py  swarm_viz.launch.py
workspace/src/swarm_viz/src/: viz_node.cpp
worlds/: icuas26_1_world.sdf
